--- a/src/app/modules/daybook/pages/layout/daybook-layout.component.html
+++ b/src/app/modules/daybook/pages/layout/daybook-layout.component.html
@@ -2,7 +2,7 @@
   <div class="columns">
     <div class="column is-narrow">
       <div class="box" style="width: 300px;">
-        <p class="title is-5">Entry View</p>
+        <entry-list/>
       </div>
     </div>
     <div class="column">
