--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">
       <img src="https://opensource.salesforce.com/akita/img/akita.svg" alt="" width="112" height="28">
@@ -18,4 +18,6 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="mt-2">
+  <router-outlet></router-outlet>
+</div>
