--- a/src/app/modules/daybook/pages/layout/daybook-layout.component.html
+++ b/src/app/modules/daybook/pages/layout/daybook-layout.component.html
@@ -1,7 +1,7 @@
 <div class="container is-fluid">
   <div class="columns">
     <div class="column is-narrow">
-      <div class="box" style="width: 300px;">
+      <div style="width: 300px;">
         <entry-list/>
       </div>
     </div>
