--- a/src/app/modules/daybook/components/entry/entry.component.html
+++ b/src/app/modules/daybook/components/entry/entry.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="entry && entryDate">
-  <div class="entry-container cursor-pointer mb-3 p-2">
+  <div (click)="goToEntry()" class="entry-container cursor-pointer mb-3 p-2">
     <div class="is-flex">
       <span class="has-text-success fs-5 fw-bold">{{entryDate.day}}</span>
       <span class="mx-1 is-size-5">{{ entryDate.month }}</span>
