--- a/src/app/modules/daybook/pages/layout/daybook-layout.component.html
+++ b/src/app/modules/daybook/pages/layout/daybook-layout.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="column">
       <div class="box">
-        <p class="title is-5">Entry Editor</p>
+        <router-outlet/>
       </div>
     </div>
   </div>
