--- a/src/app/modules/daybook/pages/entry-view/entry-view.component.html
+++ b/src/app/modules/daybook/pages/entry-view/entry-view.component.html
@@ -20,4 +20,7 @@
       <textarea formControlName="text"  placeholder="Qué sucudió hoy?"></textarea>
     </div>
   </form>
+  <button (click)="onSubmit()" [title]="(entry && entry.id) ? 'Update' : 'Save'" class="button is-primary mx-2 fab">
+    <i class="lni lni-save"></i>
+  </button>
 </ng-container>
